--- a/index.html
+++ b/index.html
@@ -177,163 +177,191 @@
 
     <!-- 메인 콘텐츠 -->
     <main class="flex-1 overflow-y-auto p-4 md:p-6">
-      <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-6">
-        
-        <!-- 원자재 섹션 -->
-        <section class="card p-6 space-y-4">
-          <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">원자재</h2>
-          <!-- 금 -->
-          <div class="card p-4 hover:shadow-lg transition">
-            <div class="flex items-center justify-between">
-              <div class="text-lg font-semibold">금 (GLD)</div>
-              <i class="fas fa-sun text-yellow-400"></i>
-            </div>
-            <div class="text-2xl font-bold mt-1">2,685.40</div>
-            <div class="text-sm positive">+1.24% (+32.80)</div>
-          </div>
-          <!-- 은 -->
-          <div class="card p-4 hover:shadow-lg transition">
-            <div class="flex items-center justify-between">
-              <div class="text-lg font-semibold">은 (SLV)</div>
-              <i class="fas fa-gem text-gray-300"></i>
-            </div>
-            <div class="text-2xl font-bold mt-1">31.85</div>
-            <div class="text-sm positive">+2.15% (+0.67)</div>
-          </div>
-          <!-- 금 공포 탐욕 지수 -->
-          <div class="card p-4">
-            <h3 class="text-lg font-semibold text-center mb-2">금 공포 탐욕 지수 (Fear & Greed)</h3>
-            <div class="gauge-container">
-              <div class="gauge-semi-circle"></div>
-              <div class="gauge-mask"></div>
-              <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(50 * 1.8deg - 90deg));"></div>
-              <div class="gauge-center-point"></div>
-              <div class="gauge-labels">
-                <span>0</span>
-                <span>100</span>
-              </div>
-            </div>
-            <div class="text-center text-2xl font-bold mt-2">50 <span class="text-base">(Neutral)</span></div>
-          </div>
-        </section>
-
-        <!-- 미국 주식 섹션 -->
-        <section class="card p-6 space-y-4">
-          <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">미국 주식</h2>
-            <!-- S&P500 -->
-            <div class="card p-4 hover:shadow-lg transition">
+      <div class="max-w-7xl mx-auto">
+        <div class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-4 gap-6">
+          
+          <!-- 원자재 섹션 -->
+          <section class="card p-6 space-y-4">
+            <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">원자재</h2>
+            <!-- 금 -->
+            <div class="card p-4 hover:shadow-lg transition text-center">
               <div class="flex items-center justify-between">
-                <div class="text-lg font-semibold">S&P 500</div>
-                <i class="fas fa-chart-line text-blue-400"></i>
+                <div class="text-lg font-semibold">금 (GLD)</div>
+                <i class="fas fa-layer-group text-yellow-400 text-2xl"></i>
               </div>
-              <div class="text-2xl font-bold mt-1">5,842.01</div>
-              <div class="text-sm negative">-0.38% (-22.31)</div>
+              <div class="text-2xl font-bold mt-1">2,685.40</div>
+              <div class="text-sm positive flex items-center justify-center space-x-2">
+                <i class="fas fa-arrow-trend-up"></i>
+                <span>+1.24% (+32.80)</span>
+              </div>
             </div>
-            <!-- QQQ -->
-            <div class="card p-4 hover:shadow-lg transition">
+            <!-- 은 -->
+            <div class="card p-4 hover:shadow-lg transition text-center">
               <div class="flex items-center justify-between">
-                <div class="text-lg font-semibold">QQQ (나스닥 100)</div>
-                <i class="fas fa-rocket text-purple-400"></i>
+                <div class="text-lg font-semibold">은 (SLV)</div>
+                <i class="fas fa-layer-group text-gray-400 text-2xl"></i>
               </div>
-              <div class="text-2xl font-bold mt-1">498.75</div>
-              <div class="text-sm negative">-0.62% (-3.10)</div>
+              <div class="text-2xl font-bold mt-1">31.85</div>
+              <div class="text-sm positive flex items-center justify-center space-x-2">
+                <i class="fas fa-arrow-trend-up"></i>
+                <span>+2.15% (+0.67)</span>
+              </div>
             </div>
-            <!-- 미국 주식 공포탐욕 지수 -->
+            <!-- 금 공포 탐욕 지수 -->
             <div class="card p-4">
-              <h3 class="text-lg font-semibold text-center mb-2">미국 주식 공포 탐욕 지수 (Fear & Greed)</h3>
+              <h3 class="text-lg font-semibold text-center mb-2">금 공포 탐욕 지수 (Fear & Greed)</h3>
               <div class="gauge-container">
                 <div class="gauge-semi-circle"></div>
                 <div class="gauge-mask"></div>
-                <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(62 * 1.8deg - 90deg));"></div>
+                <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(50 * 1.8deg - 90deg));"></div>
                 <div class="gauge-center-point"></div>
                 <div class="gauge-labels">
-                  <span>Extreme Fear</span>
-                  <span>Extreme Greed</span>
+                  <span>0</span>
+                  <span>100</span>
                 </div>
               </div>
-              <div class="text-center text-2xl font-bold mt-2">62 <span class="text-base">(Greed)</span></div>
+              <div class="text-center text-2xl font-bold mt-2">50 <span class="text-base">(Neutral)</span></div>
             </div>
-        </section>
+          </section>
 
-        <!-- 한국 주식 섹션 -->
-        <section class="card p-6 space-y-4">
-          <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">한국 주식</h2>
-            <!-- 코스피 -->
-            <div class="card p-4 hover:shadow-lg transition">
-              <div class="flex items-center justify-between">
-                <div class="text-lg font-semibold">코스피</div>
-                <i class="fas fa-building-columns text-red-400"></i>
-              </div>
-              <div class="text-2xl font-bold mt-1">2,612.45</div>
-              <div class="text-sm positive">+0.85% (+22.10)</div>
-            </div>
-            <!-- 코스닥 -->
-            <div class="card p-4 hover:shadow-lg transition">
-              <div class="flex items-center justify-between">
-                <div class="text-lg font-semibold">코스닥</div>
-                <i class="fas fa-building-columns text-orange-400"></i>
-              </div>
-              <div class="text-2xl font-bold mt-1">842.18</div>
-              <div class="text-sm positive">+1.12% (+9.32)</div>
-            </div>
-            <!-- 한국 주식 공포탐욕 지수 -->
-            <div class="card p-4">
-              <h3 class="text-lg font-semibold text-center mb-2">한국 주식 공포 탐욕 지수 (Fear & Greed)</h3>
-              <div class="gauge-container">
-                <div class="gauge-semi-circle"></div>
-                <div class="gauge-mask"></div>
-                <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(79.9 * 1.8deg - 90deg));"></div>
-                <div class="gauge-center-point"></div>
-                 <div class="gauge-labels">
-                  <span>V.Fear</span>
-                  <span>V.Greed</span>
+          <!-- 미국 주식 섹션 -->
+          <section class="card p-6 space-y-4">
+            <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">미국 주식</h2>
+              <!-- S&P500 -->
+              <div class="card p-4 hover:shadow-lg transition text-center">
+                <div class="flex items-center justify-between">
+                  <div class="text-lg font-semibold">S&P 500</div>
+                  <i class="fas fa-chart-line text-blue-400 text-2xl"></i>
+                </div>
+                <div class="text-2xl font-bold mt-1">5,842.01</div>
+                <div class="text-sm negative flex items-center justify-center space-x-2">
+                  <i class="fas fa-arrow-trend-down"></i>
+                  <span>-0.38% (-22.31)</span>
                 </div>
               </div>
-              <div class="text-center text-2xl font-bold mt-2">79.9 <span class="text-base">(Extreme Greed)</span></div>
-            </div>
-        </section>
+              <!-- QQQ -->
+              <div class="card p-4 hover:shadow-lg transition text-center">
+                <div class="flex items-center justify-between">
+                  <div class="text-lg font-semibold">QQQ (나스닥 100)</div>
+                  <i class="fas fa-rocket text-purple-400 text-2xl"></i>
+                </div>
+                <div class="text-2xl font-bold mt-1">498.75</div>
+                <div class="text-sm negative flex items-center justify-center space-x-2">
+                  <i class="fas fa-arrow-trend-down"></i>
+                  <span>-0.62% (-3.10)</span>
+                </div>
+              </div>
+              <!-- 미국 주식 공포탐욕 지수 -->
+              <div class="card p-4">
+                <h3 class="text-lg font-semibold text-center mb-2">미국 주식 공포 탐욕 지수 (Fear & Greed)</h3>
+                <div class="gauge-container">
+                  <div class="gauge-semi-circle"></div>
+                  <div class="gauge-mask"></div>
+                  <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(62 * 1.8deg - 90deg));"></div>
+                  <div class="gauge-center-point"></div>
+                  <div class="gauge-labels">
+                    <span>Extreme Fear</span>
+                    <span>Extreme Greed</span>
+                  </div>
+                </div>
+                <div class="text-center text-2xl font-bold mt-2">62 <span class="text-base">(Greed)</span></div>
+              </div>
+          </section>
 
-        <!-- 크립토 섹션 -->
-        <section class="card p-6 space-y-4">
-          <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">크립토</h2>
-            <!-- 비트코인 -->
-            <div class="card p-4 hover:shadow-lg transition">
-              <div class="flex items-center justify-between">
-                <div class="text-lg font-semibold">비트코인</div>
-                <i class="fab fa-bitcoin text-orange-500"></i>
-              </div>
-              <div class="text-2xl font-bold mt-1">$98,450</div>
-              <div class="text-sm positive">+2.45% (+$2,350)</div>
-            </div>
-            <!-- 이더리움 -->
-            <div class="card p-4 hover:shadow-lg transition">
-              <div class="flex items-center justify-between">
-                <div class="text-lg font-semibold">이더리움</div>
-                <i class="fab fa-ethereum text-blue-300"></i>
-              </div>
-              <div class="text-2xl font-bold mt-1">$3,820</div>
-              <div class="text-sm positive">+1.88% (+$70)</div>
-            </div>
-            <!-- 크립토 공포탐욕 지수 -->
-            <div class="card p-4">
-              <h3 class="text-lg font-semibold text-center mb-2">크립토 공포 탐욕 지수 (Fear & Greed)</h3>
-              <div class="gauge-container">
-                <div class="gauge-semi-circle"></div>
-                <div class="gauge-mask"></div>
-                <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(74 * 1.8deg - 90deg));"></div>
-                <div class="gauge-center-point"></div>
-                 <div class="gauge-labels">
-                  <span>Extreme Fear</span>
-                  <span>Extreme Greed</span>
+          <!-- 한국 주식 섹션 -->
+          <section class="card p-6 space-y-4">
+            <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">한국 주식</h2>
+              <!-- 코스피 -->
+              <div class="card p-4 hover:shadow-lg transition text-center">
+                <div class="flex items-center justify-between">
+                  <div class="text-lg font-semibold">코스피</div>
+                  <i class="fas fa-building-columns text-red-400 text-2xl"></i>
+                </div>
+                <div class="text-2xl font-bold mt-1">2,612.45</div>
+                <div class="text-sm positive flex items-center justify-center space-x-2">
+                  <i class="fas fa-arrow-trend-up"></i>
+                  <span>+0.85% (+22.10)</span>
                 </div>
               </div>
-              <div class="text-center text-2xl font-bold mt-2">74 <span class="text-base">(Greed)</span></div>
-            </div>
-        </section>
+              <!-- 코스닥 -->
+              <div class="card p-4 hover:shadow-lg transition text-center">
+                <div class="flex items-center justify-between">
+                  <div class="text-lg font-semibold">코스닥</div>
+                  <i class="fas fa-building-columns text-orange-400 text-2xl"></i>
+                </div>
+                <div class="text-2xl font-bold mt-1">842.18</div>
+                <div class="text-sm positive flex items-center justify-center space-x-2">
+                  <i class="fas fa-arrow-trend-up"></i>
+                  <span>+1.12% (+9.32)</span>
+                </div>
+              </div>
+              <!-- 한국 주식 공포탐욕 지수 -->
+              <div class="card p-4">
+                <h3 class="text-lg font-semibold text-center mb-2">한국 주식 공포 탐욕 지수 (Fear & Greed)</h3>
+                <div class="gauge-container">
+                  <div class="gauge-semi-circle"></div>
+                  <div class="gauge-mask"></div>
+                  <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(79.9 * 1.8deg - 90deg));"></div>
+                  <div class="gauge-center-point"></div>
+                   <div class="gauge-labels">
+                    <span>V.Fear</span>
+                    <span>V.Greed</span>
+                  </div>
+                </div>
+                <div class="text-center text-2xl font-bold mt-2">79.9 <span class="text-base">(Extreme Greed)</span></div>
+              </div>
+          </section>
+
+          <!-- 크립토 섹션 -->
+          <section class="card p-6 space-y-4">
+            <h2 class="text-2xl font-bold border-l-4 border-blue-400 pl-3">크립토</h2>
+              <!-- 비트코인 -->
+              <div class="card p-4 hover:shadow-lg transition text-center">
+                <div class="flex items-center justify-between">
+                  <div class="text-lg font-semibold">비트코인</div>
+                  <i class="fab fa-bitcoin text-orange-500 text-2xl"></i>
+                </div>
+                <div class="text-xl font-bold mt-1">₩135,245,000</div>
+                <div class="text-lg font-bold text-gray-400">$98,450</div>
+                <div class="text-sm positive flex items-center justify-center space-x-2">
+                  <i class="fas fa-arrow-trend-up"></i>
+                  <span>+2.45% (+$2,350)</span>
+                </div>
+              </div>
+              <!-- 이더리움 -->
+              <div class="card p-4 hover:shadow-lg transition text-center">
+                <div class="flex items-center justify-between">
+                  <div class="text-lg font-semibold">이더리움</div>
+                  <i class="fab fa-ethereum text-blue-300 text-2xl"></i>
+                </div>
+                <div class="text-xl font-bold mt-1">₩5,145,000</div>
+                <div class="text-lg font-bold text-gray-400">$3,820</div>
+                <div class="text-sm positive flex items-center justify-center space-x-2">
+                  <i class="fas fa-arrow-trend-up"></i>
+                  <span>+1.88% (+$70)</span>
+                </div>
+              </div>
+              <!-- 크립토 공포탐욕 지수 -->
+              <div class="card p-4">
+                <h3 class="text-lg font-semibold text-center mb-2">크립토 공포 탐욕 지수 (Fear & Greed)</h3>
+                <div class="gauge-container">
+                  <div class="gauge-semi-circle"></div>
+                  <div class="gauge-mask"></div>
+                  <div class="gauge-needle" style="transform: translateX(-50%) rotate(calc(74 * 1.8deg - 90deg));"></div>
+                  <div class="gauge-center-point"></div>
+                   <div class="gauge-labels">
+                    <span>Extreme Fear</span>
+                    <span>Extreme Greed</span>
+                  </div>
+                </div>
+                <div class="text-center text-2xl font-bold mt-2">74 <span class="text-base">(Greed)</span></div>
+              </div>
+          </section>
+        </div>
       </div>
 
       <!-- 하단 여유 공간 -->
-      <div class="card p-6 text-center text-gray-400 mt-10">
+      <div class="card p-6 text-center text-gray-400 mt-10 max-w-7xl mx-auto">
         실적 발표 캘린더 / Money Flow / 기타 위젯 자리 (준비 중)
       </div>
     </main>
